Fixed React and ReactDOM packages visibility in global scope.

--- a/src/client/components/ComponentRendered.less
+++ b/src/client/components/ComponentRendered.less
@@ -19,6 +19,7 @@
 }
 
 .component-renderer__element-container-outer {
+  will-change: max-width;
   display: flex;
   align-items: center;
   justify-content: center;
